--- a/literature.bib
+++ b/literature.bib
@@ -57662,6 +57662,7 @@ African Linguistics",
 }
 
 @incollection{venneman1973explanation,
+	author="Theo Vennemann",
 	title={Explanation in Syntax},
        editor={John Kimball},
        booktitle={Syntax and Semantics2},
@@ -57897,4 +57898,134 @@ African Linguistics",
 	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/25226750",
 	year="2003"
 }
+
+
+@incollection{wals-112,
+  address   = {Leipzig},
+  author    = {Matthew S. Dryer},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {Negative Morphemes},
+  url       = {https://wals.info/chapter/112},
+  year      = {2013}
+}
+
+@incollection{wals-69,
+  address   = {Leipzig},
+  author    = {Matthew S. Dryer},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {Position of Tense-Aspect Affixes},
+  url       = {https://wals.info/chapter/69},
+  year      = {2013}
+}
+
+@book{bybee1994the,
+	title="The Evolution of Grammar: Tense, Aspect, and Modality in the Languages of the World",
+	author="Joan L. {Bybee} and Revere D. {Perkins} and William {Pagliuca}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/620256024",
+	year="1994"
+}
+
+@book{dahl1985tense,
+	title="Tense and aspect systems",
+	author="Östen {Dahl}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1526285778",
+	year="1985"
+}
+
+@book{binnick1991time,
+	title="Time and the Verb: A Guide to Tense and Aspect",
+	author="Robert I. {Binnick}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1977985478",
+	year="1991"
+}
+
+@book{comrie1976aspect,
+	title="Aspect: An Introduction to the Study of Verbal Aspect and Related Problems",
+	author="Bernard {Comrie}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2051007066",
+	year="1976"
+}
+
+@incollection{wals-111,
+  address   = {Leipzig},
+  author    = {Jae Jung Song},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {Nonperiphrastic Causative Constructions},
+  url       = {https://wals.info/chapter/111},
+  year      = {2013}
+}
+
+@book{UDFinnish-TDT,
+	author="Ginter, Filip and Kanerva, Jenna and Laippala, Veronika and Miekka, Niko and Missilä, Anna and Ojala, Stina and Pyysalo, Sampo",
+	title="UD Finnish-TDT, Version 2.6",
+	url="https://github.com/UniversalDependencies/UD_Finnish-TDT",
+		year="2020"
+}
+
+@book{hungarian-szeged,
+	title="UD Hungarian-Szeged, Version 2.6",
+	author="Farkas, Richárd and Simkó, Katalin and Szántó, Zsolt and Varga, Viktor and Vincze, Veronika",
+	url = "https://github.com/UniversalDependencies/UD_Hungarian-Szeged/tree/master",
+	year="2020"
+}
+
+@book{turkish-imst,
+	title="UD Turkish-IMST, Version 2.6",
+	author="Çöltekin, Çağrı and Cebiroğlu Eryiğit, Gülşen and Gökırmak, Memduh and Kaşıkara, Hüner and Sulubacak, Umut and Tyers, Francis",
+	url="https://github.com/UniversalDependencies/UD_Turkish-IMST/tree/master",
+	year="2020"
+}
+
+@inproceedings{chun2018building,
+	title="Building Universal Dependency Treebanks in Korean",
+	author="Jayeol {Chun} and Na-Rae {Han} and Jena D. {Hwang} and Jinho D. {Choi}",
+	booktitle="Proceedings of the Eleventh International Conference on Language Resources and Evaluation (LREC 2018)",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2805981949",
+	year="2018"
+}
+
+@inproceedings{asahara2018universal,
+	title="Universal Dependencies Version 2 for Japanese.",
+	author="Masayuki {Asahara} and Hiroshi {Kanayama} and Takaaki {Tanaka} and Yusuke {Miyao} and Sumire {Uematsu} and Shinsuke {Mori} and Yuji {Matsumoto} and Mai {Omura} and Yugo {Murawaki}",
+	booktitle="Proceedings of the Eleventh International Conference on Language Resources and Evaluation (LREC 2018)",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2805882637",
+	year="2018"
+}
+
+
+@book{karlsson1999finnish,
+	title="Finnish: An Essential Grammar",
+	author="Fred {Karlsson}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1738640225",
+	year="1999"
+}
+
+
+@article{pollock1989verb,
+	title="Verb movement, universal grammar and the structure of IP",
+	author="Jean-Yves {Pollock}",
+	journal="Linguistic Inquiry",
+	volume="20",
+	number="20",
+	pages="365--424",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1496771994",
+	year="1989"
+}
+
+@article{halle1993distributed,
+	title="Distributed morphology and the pieces of inflection",
+	author="M {Halle} and Alec {Marantz}",
+	journal="",
+	pages="111--176",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1543984587",
+	year="1993"
+}
+
+
 
