--- a/name.tex
+++ b/name.tex
@@ -1010,6 +1010,10 @@ Optimization also successfully predicts several universals of morpheme ordering,
 
 \bibliography{literature}
 \bibliographystyle{natbib}
+
+
+\end{document}
+
 \appendix
 
 \section{Appendix}
